refactor: Common static analysis issues
Use this link to re-run the recipe: https://app.moderne.io/recipes/org.openrewrite.staticanalysis.CommonStaticAnalysis?organizationId=TmV0ZmxpeCArIFNwcmluZw%3D%3D

Co-authored-by: Moderne <team@moderne.io>