@@ -14,30 +14,30 @@ import static org.junit.Assert.assertNull;
 
 public class DistributedQueueTest {
 
-    private TestingServer _zkServer;
-    private ZkClient _zkClient;
+    private TestingServer zkServer;
+    private ZkClient zkClient;
 
     @Before
     public void setUp() throws Exception {
-        _zkServer = new TestingServer(4711);
-        _zkClient = ZkTestSystem.createZkClient(_zkServer.getConnectString());
+        zkServer = new TestingServer(4711);
+        zkClient = ZkTestSystem.createZkClient(zkServer.getConnectString());
     }
 
     @After
     public void tearDown() throws IOException {
-        if (_zkClient != null) {
-            _zkClient.close();
+        if (zkClient != null) {
+            zkClient.close();
         }
-        if (_zkServer != null) {
-            _zkServer.close();
+        if (zkServer != null) {
+            zkServer.close();
         }
     }
 
     @Test(timeout = 15000)
     public void testDistributedQueue() {
-        _zkClient.createPersistent("/queue");
+        zkClient.createPersistent("/queue");
 
-        DistributedQueue<Long> distributedQueue = new DistributedQueue<Long>(_zkClient, "/queue");
+        DistributedQueue<Long> distributedQueue = new DistributedQueue<>(zkClient, "/queue");
         distributedQueue.offer(17L);
         distributedQueue.offer(18L);
         distributedQueue.offer(19L);
@@ -50,9 +50,9 @@ public class DistributedQueueTest {
 
     @Test(timeout = 15000)
     public void testPeek() {
-        _zkClient.createPersistent("/queue");
+        zkClient.createPersistent("/queue");
 
-        DistributedQueue<Long> distributedQueue = new DistributedQueue<Long>(_zkClient, "/queue");
+        DistributedQueue<Long> distributedQueue = new DistributedQueue<>(zkClient, "/queue");
         distributedQueue.offer(17L);
         distributedQueue.offer(18L);
 
@@ -66,19 +66,19 @@ public class DistributedQueueTest {
 
     @Test(timeout = 30000)
     public void testMultipleReadingThreads() throws InterruptedException {
-        _zkClient.createPersistent("/queue");
+        zkClient.createPersistent("/queue");
 
-        final DistributedQueue<Long> distributedQueue = new DistributedQueue<Long>(_zkClient, "/queue");
+        final DistributedQueue<Long> distributedQueue = new DistributedQueue<>(zkClient, "/queue");
 
         // insert 100 elements
         for (int i = 0; i < 100; i++) {
-            distributedQueue.offer(new Long(i));
+            distributedQueue.offer(Long.valueOf(i));
         }
 
         // 3 reading threads
         final Set<Long> readElements = Collections.synchronizedSet(new HashSet<Long>());
-        List<Thread> threads = new ArrayList<Thread>();
-        final List<Exception> exceptions = new Vector<Exception>();
+        List<Thread> threads = new ArrayList<>();
+        final List<Exception> exceptions = new Vector<>();
 
         for (int i = 0; i < 3; i++) {
             Thread thread = new Thread() {
